objects/Sales_Order_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order Forms</relationshipLabel>
        <relationshipName>Sales_Order_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Order_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_contact_person_s_name__c</fullName>
        <label>Billing contact person&apos;s name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_methodology_details__c</fullName>
        <label>Billing methodology details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Invoice_to__c</fullName>
        <label>Email Invoice to</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Client_Location__c</fullName>
        <formula>Opportunity__r.Account.BillingStreet  &amp; BR()&amp;
 Opportunity__r.Account.BillingCity  &amp; BR()&amp;
 Opportunity__r.Account.BillingState  &amp; BR()&amp;
 Opportunity__r.Account.BillingPostalCode  &amp; BR()&amp;
 Opportunity__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Client Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hourly_cost__c</fullName>
        <label>Hourly cost</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_frequency__c</fullName>
        <label>Invoicing frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Subscriptions__c</fullName>
        <formula>Opportunity__r.No_of_Subscriptions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Subscriptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Support__c</fullName>
        <label>No. of Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_hours__c</fullName>
        <formula>Opportunity__r.PS_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_months__c</fullName>
        <formula>Opportunity__r.of_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Lookup</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Order Forms (Opportunity Lookup)</relationshipLabel>
        <relationshipName>Sales_Order_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Order Forms</relationshipLabel>
        <relationshipName>Sales_Order_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Projected_End_Date__c</fullName>
        <formula>Start_Date__c + ( Opportunity__r.of_Months__c  *30.44)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Support_End_Date__c</fullName>
        <formula>Support_Start_Date__c + (  Opportunity__r.of_Months__c  *30.44)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Support End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Form_Status__c</fullName>
        <label>Sales Order Form Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Order_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Rate__c</fullName>
        <label>Support Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Start_Date__c</fullName>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Was_any_3rd_party_services_used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was any 3rd party services used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_support_purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was support purchased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_will_AutoRABIT_pay_for_item__c</fullName>
        <label>Who will AutoRABIT pay for item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Billing_Contact_Name__c</fullName>
        <label>3rd Party Billing Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Order Form-{0000}</displayFormat>
        <label>Sales Order Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Third_Party_Services</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Was_any_3rd_party_services_used__c   = TRUE,
OR(
ISBLANK( Who_will_AutoRABIT_pay_for_item__c  ),
ISBLANK(  X3rd_Party_Billing_Contact_Name__c  ),
ISBLANK( Hourly_cost__c  ),
ISBLANK(  Address__c   ),
ISBLANK(  Billing_methodology_details__c  )))</errorConditionFormula>
        <errorDisplayField>Was_any_3rd_party_services_used__c</errorDisplayField>
        <errorMessage>Please fill all the details in 3rd party information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Was_Support_Purchased</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Was_support_purchased__c  = TRUE,
OR(
ISBLANK( No_of_Support__c ),
ISBLANK( Support_Rate__c )))</errorConditionFormula>
        <errorDisplayField>Was_support_purchased__c</errorDisplayField>
        <errorMessage>Please fill all the fields in &apos;Support Details&apos; section</errorMessage>
    </validationRules>
</CustomObject>